2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't mutate string in ‘checkidentifier’.

	* rcslex.c (checkidentifier): Don't NUL-terminate arg to
	error message; instead, use ‘%.*s’ in error message format string.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move ‘redefined’ from rcslex.c to rcsutil.c.

	* base.h (redefined): Move func decl; nfc.
	* rcslex.c (redefined): Move func from here...
	* rcsutil.c (redefined): ...to here.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move some funcs out of rcslex.c to b-fb.[hc].

	* b-fb.c (Ozclose, Orewind, aflush, oflush, afputc, aputs)
	(aprintf): Move funcs from rcslex.c to here.
	* b-fb.h (Ozclose, Orewind, aflush, oflush, afputc, aputs)
	(aprintf): Move func decls from base.h to here; add ‘extern’.
	* rcsclean.c: #include "b-fb.h".
	* rcssyn.c: Likewise.
	* rlog.c: Likewise.
	* base.h (Ozclose, Orewind, aflush, oflush, afputc, aputs)
	(aprintf): Delete func decls.
	* rcslex.c (Ozclose, Orewind, aflush, oflush, afputc, aputs)
	(aprintf): Delete funcs.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Mutate strings in rcs(1) ‘argv’ less.

	* rcs.c (getassoclst, getaccessor, getstates):
	Cons a new string in ‘SHARED’ instead of mutating the arg.

2010-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: EDIT_SCRIPT_SHORT, EDIT_SCRIPT_OVERFLOW

	* rcsedit.c (EDIT_SCRIPT_SHORT, EDIT_SCRIPT_OVERFLOW): New macros.
	(editEndsPrematurely, editLineNumberOverflow): Delete funcs.
	(insertline, deletelines, copylines): Use ‘EDIT_SCRIPT_OVERFLOW’.
	(editstring): Likewise; also, use ‘EDIT_SCRIPT_SHORT’.

2010-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Make ‘take’ handle branch number.

	Regression introduced 2010-04-21,
	"Use ‘TAKE’, not ‘partialno’; zonk the latter".
	* rcsrev.c (take): Stop looping at terminating NUL;
	in that case, accumulate up to the NUL as well.
	* base.h (take): Update var name in func decl.
