@@ -810,10 +810,10 @@ struct hshentry *must_get_delta_num (void);
 void readstring (void);
 void printstring (void);
 struct cbuf savestring (void);
-char *checkid (char *id, int delimiter);
-char *checksym (char *sym, int delimiter);
-void checksid (char *id);
-void checkssym (char *sym);
+char const *checkid (char const *id, int delimiter);
+char const *checksym (char const *sym, int delimiter);
+void checksid (char const *id);
+void checkssym (char const *sym);
 
 /* rcsmap */
 extern const enum tokens const ctab[];
